--- a/img-compress.html
+++ b/img-compress.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Optimize and compress your images online with our fully responsive image compression tool. Choose your compression level and download the optimized images instantly.">
     <meta name="keywords" content="image compression, optimize images, image optimizer, compress images online">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="mypdf">
     <title>Image Compression Tool - Optimize Your Images Online</title>
     <style>
         /* Enhanced CSS Styling */
